# bert-from-scratch

./: .gitignore  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  reference.html  reference.qmd  requirements.txt  search.json
.github/workflows/: quarto.yml
exercises/: index.html  index.qmd
jax/: notebook_01_intro.ipynb  notebook_02_embeddings.ipynb  notebook_03_mla.ipynb  notebook_04_moe.ipynb  notebook_05_dsa.ipynb  notebook_06_block.ipynb  notebook_07_training.ipynb  notebook_08_inference.ipynb
pytorch/: notebook_01_intro.ipynb  notebook_02_embeddings.ipynb  notebook_03_mla.ipynb  notebook_04_moe.ipynb  notebook_05_dsa.ipynb  notebook_06_block.ipynb  notebook_07_training.ipynb  notebook_08_inference.ipynb
src/: __init__.py
src/bert/: __init__.py  attention.py  bert.py  embeddings.py  transformer.py
tasks/: index.html  index.qmd  sidebar.yml
tasks/task-01-pytorch-basics/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-02-self-attention/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-03-multi-head-attention/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-04-transformer-encoder/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-05-positional-embeddings/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-06-bert-embeddings-encoder/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-07-bert-pretraining/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-08-bert-classification/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-09-bert-qa/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-10-inference-serving/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-11-production-optimization/: notebook.html  notebook.ipynb  overview.html  overview.md
tasks/task-12-advanced-exercises/: notebook.html  notebook.ipynb  overview.html  overview.md
